<resources>
    <string name="app_name">Smart Bin Collect</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name :</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="currently_no_bin_is_full">Currently, no bin is full</string>
    <string name="logout">Logout</string>
    <string name="bin_is_full_now_you_can_pick_up">Bin is full now you can pick up</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
</resources>